# oauth_fastapi

./: Dockerfile  alembic.ini  config.py  docker-compose.yaml  main.py  pyproject.toml
auth/: hash_password.py  oauth2.py  routes.py  username_validators.py
db/: database.py
docker_scripts/: runserver.sh
migrations/: env.py
migrations/versions/: 387accc20f21_initial.py  d2840b647991_initial.py
oauth_fastapi/db/: models.py  schemas.py
user/: crud.py  models.py  routes.py  schemas.py
users/: crud.py  models.py  routes.py  schemas.py
validators/: password_validator.py  username_validator.py
